# integrating-gen-ai

guides/: 01-generative-ai-fundamentals.md  04-rag-types-and-use-cases.md
labs/01-llm-chat-agent/demo-01-llm-via-open-ai-sdk/: .env2
labs/02-langchain/demo-01-setting-up-and-calling-an-llm-in-langchain/: pyproject.toml
labs/02-langchain/demo-07-langchain-streaming/: .gitignore  main.py  test_client.html
labs/02-langchain/demo-11-automating-customer-support-responses/: main.py
labs/02-langchain/demo-12-structuredoutputparser-product-information/: main.py
labs/02-langchain/demo-13-automating-email-categorization-with-ai/: main.py
labs/02-langchain/demo-14-simple-lcel-chain-demo/: main.py
labs/02-langchain/demo-15-sentiment-analysis-lcel-chain-demo/: main.py  pyproject.toml
labs/02-langchain/demo-16-simple-router-chain-api/: main.py
labs/02-langchain/demo-17-building-a-fastapi-chat-app-stateless-vs-stateful-prompts/: main.py
labs/02-langchain/demo-18-fast-api-text-translation-with-memory-and-chaining/: main.py
labs/02-langchain/demo-19-session-based-conversational-memory-in-action/: main.py
labs/02-langchain/demo-20-intelligent-customer-support-agent/: main.py
labs/03-rag/demo-02-text-embedding-generator/: .env.example  README.md  main.py  pyproject.toml
labs/03-rag/demo-03-embedding-with-chromadb/: .gitignore  HOW_IT_WORKS.md  README.md  main.py  pyproject.toml
labs/03-rag/demo-10-rag-retrieval-pipeline/: ENHANCEMENT_SUMMARY.md  README.md  UPDATE_SUMMARY.md  main.py  pyproject.toml
labs/03-rag/demo-10-rag-retrieval-pipeline/docs/: QUICKSTART.md
labs/03-rag/demo-11-complete-rag-pipeline/: .env.example  README.md  main.py  pyproject.toml  test_demo.sh
labs/03-rag/demo-11-complete-rag-pipeline/docs/: PROJECT_ANALYSIS.md  QUICKSTART.md
labs/03-rag/demo-14-embedding-crud-with-vector-store/: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
labs/03-rag/demo-14-embedding-crud-with-vector-store/main/: __init__.py  app.py
labs/03-rag/demo-14-embedding-crud-with-vector-store/main/models/: __init__.py  models.py
labs/03-rag/demo-14-embedding-crud-with-vector-store/main/routes/: __init__.py  routes.py
labs/03-rag/demo-14-embedding-crud-with-vector-store/main/service/: embedding_service.py
labs/03-rag/demo-14-embedding-crud-with-vector-store/test/: __init__.py  conftest.py  test_routes.py  test_store_embeddings.py
labs/03-rag/demo-15-multi-source-file/: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
labs/03-rag/demo-15-multi-source-file/main/: multi_source_loader.py
labs/03-rag/demo-15-multi-source-file/main/services/: __init__.py  pdf_loader_service.py  text_loader_service.py  web_loader_service.py
labs/03-rag/demo-16-injection-pipeline/: .env.example  README.md  main.py  pyproject.toml
labs/03-rag/demo-16-injection-pipeline/Documents/: guidelines.txt  policy.txt
labs/03-rag/demo-16-injection-pipeline/main/: __init__.py
labs/03-rag/demo-16-injection-pipeline/main/routes/: __init__.py  ingestion_routes.py
labs/03-rag/demo-16-injection-pipeline/main/services/: __init__.py  chunking_service.py  document_processing_service.py  embedding_service.py  html_loader_service.py  injection_pipeline_service.py  pdf_loader_service.py  query_service.py  text_loader_service.py  web_loader_service.py
labs/03-rag/demo-16-rag-retrieval/: .env.example  README.md  main.py  pyproject.toml
labs/03-rag/demo-16-rag-retrieval/main/: lcel.py  retriever.py  runner.py  utils.py  vector_store.py
