[project]
name = "demo-01-setting-up-and-calling-an-llm-in-langchain"
version = "0.1.0"
description = "Setting up llm and calling llm with langchain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
	"uvicorn==0.40.0",
	"python-dotenv==1.2.1",
	"langchain==1.2.8",
	"langchain-openai==1.1.7"
]
