[project]
name = "demo-03-embedding-crud-with-vector-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai==1.1.7",
    "numpy==2.3.4",
    "python-dotenv==1.2.1",
    "pydantic==2.12.5",
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "chromadb==1.4.0",
    "langchain-chroma==1.1.0"
]

[tool.uv]
dev-dependencies = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "httpx==0.27.0",
]
