[project]
name = "practice-multi-source"
version = "0.1.0"
description = "LO1 In-Session Practice: Load documents from multiple sources (PDF, text, web)"
requires-python = ">=3.12"
dependencies = [
    "langchain-community==0.4.1",
    "langchain-core==1.0.1",
    "pypdf==6.2.0",
    "beautifulsoup4==4.14.2",
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "reportlab>=4.4.4",
]
