[project]
name = "lo2-practice-chunking"
version = "1.0.0"
description = "LO2 In-Session Practice: Chunk documents from multiple sources with FastAPI upload"
requires-python = ">=3.12"
dependencies = [
    # Core LangChain libraries (aligned with demo-1)
    "langchain-community==0.4.1",
    "langchain-core==1.0.1",
    # Additional LangChain libraries for demo-2 functionality
    "langchain-text-splitters==1.0.0",
    "langchain-openai==1.0.0",
    "langchain-postgres==0.0.16",
    # Document processing (aligned with demo-1)
    "pypdf==6.2.0",
    "beautifulsoup4==4.14.2",
       
    # Database and API dependencies
    "psycopg[binary]==3.2.12",
    "python-dotenv==1.2.1",
    "fastapi==0.121.0",
    "uvicorn==0.38.0",
    "python-multipart==0.0.20",
]
