[project]
name = "rag-retrieval-pipeline"
version = "0.1.0"
description = "RAG Retrieval Pipeline - Configurable Retriever with Vector Store"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-community==0.4.1",
    "langchain-core==1.0.1",
    "langchain-text-splitters==1.0.0",
    "langchain-openai==1.0.0",
    "langchain-postgres==0.0.16",
    "pypdf==6.2.0",
    "beautifulsoup4==4.14.2",
    "psycopg[binary]==3.2.12",
    "python-dotenv==1.2.1",
    "fastapi==0.121.0",
    "uvicorn==0.38.0",
    "python-multipart==0.0.20",
]

